--- a/GenLauncherNet/Windows/OptionsWindow.xaml
+++ b/GenLauncherNet/Windows/OptionsWindow.xaml
@@ -790,8 +790,6 @@
     </Window.Resources>
 
     <Grid>
-
-
         <Grid.RowDefinitions>
             <RowDefinition Height="50"></RowDefinition>
             <RowDefinition Height="38"></RowDefinition>
@@ -832,7 +830,8 @@
         <Rectangle HorizontalAlignment="Left" StrokeThickness="2" Stroke="{DynamicResource GenLauncherDarkFillColor}" Height="2" Margin="466,234,0,0" VerticalAlignment="Top" Width="490" Grid.Row="3" Grid.ColumnSpan="10" Grid.RowSpan="10"/>
         <Rectangle HorizontalAlignment="Left" StrokeThickness="2" Stroke="{DynamicResource GenLauncherDarkFillColor}" Height="2" Margin="466,338,0,0" VerticalAlignment="Top" Width="490" Grid.Row="3" Grid.ColumnSpan="10" Grid.RowSpan="10"/>
 
-        <Button Content="Apply"  Grid.Column="1" Grid.Row="11" Margin="0,10,0,0" Grid.RowSpan="2" Grid.ColumnSpan="3" HorizontalAlignment="Center" FontSize="22" FontWeight="Bold" VerticalAlignment="Top" Width="157" Height="40" Click="Apply_Click" />
+        <Button Content="Apply"  Grid.Column="1" Grid.Row="11" Margin="-270,10,0,0" Grid.RowSpan="2" Grid.ColumnSpan="3" HorizontalAlignment="Center" FontSize="22" FontWeight="Bold" VerticalAlignment="Top" Width="157" Height="40" Click="Apply_Click" />
+        <Button Content="Set recommended settings"  Grid.Column="1" Grid.Row="11" Margin="290,10,0,0" Grid.RowSpan="2" Grid.ColumnSpan="3" HorizontalAlignment="Center" FontSize="22" FontWeight="Bold" VerticalAlignment="Top" Width="290" Height="40" Click="SetDefaultOptions" />
 
         <Label Content="OPTIONS" Grid.Column="1" Grid.Row="1" Margin="0,-8,0,0" Foreground="{DynamicResource GenLauncherDefaultTextColor}" FontSize="22" FontWeight="Bold" Grid.ColumnSpan="3" HorizontalAlignment="Center" VerticalAlignment="Top" Width="108"/>
         <RadioButton x:Name="modded" GroupName="ModdedExe" Foreground="{DynamicResource GenLauncherDefaultTextColor}" Margin="15,3,0,0" FontSize="16" Content="Use modded exe files (recommended)" Grid.Column="1" Grid.Row="3" HorizontalAlignment="Left"  VerticalAlignment="Top"  Click="modded_Click" Height="20"/>
